--- a/apps/shop/wrangler.toml
+++ b/apps/shop/wrangler.toml
@@ -1,7 +1,12 @@
 name = "mezcalomano-shop"
 compatibility_date = "2026-01-14"
-compatibility_flags = ["nodejs_compat"]
-pages_build_output_dir = ".vercel/output/static"
+compatibility_flags = ["nodejs_compat", "global_fetch_strictly_public"]
+main = ".open-next/worker.js"
+pages_build_output_dir = ".open-next"
+
+[assets]
+directory = ".open-next/assets"
+binding = "ASSETS"
 
 [[d1_databases]]
 binding = "DB"
