--- a/apps/shop/wrangler.toml
+++ b/apps/shop/wrangler.toml
@@ -6,7 +6,7 @@ pages_build_output_dir = ".open-next"
 
 [assets]
 directory = ".open-next/assets"
-binding = "ASSETS"
+binding = "STATIC_ASSETS"
 
 [[d1_databases]]
 binding = "DB"
