--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "astro/tsconfigs/base",
+  "compilerOptions": {
+    "skipLibCheck": true,
+    "noEmit": true
+  },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
