--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "build:matrix-cards": "node src/scripts/build-matrix-cards.js"
+    "build:matrix-cards": "node src/scripts/build-matrix-cards.js",
+    "check": "astro check"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^11.0.0",
-    "astro": "^4.16.19",
+    "@astrojs/cloudflare": "11.0.5",
+    "astro": "4.15.0",
     "papaparse": "^5.4.1"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.9.0",
     "@types/papaparse": "^5.3.14",
     "sharp": "^0.34.5",
     "typescript": "^5.6.0"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
